# ausmalbar-fullstack

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  Dockerfile  README.md  README_i18n.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.windsurf/: config.json  guidelines.md
.windsurf/rules/: project-rules.md
ausmalbar/: __init__.py  context_processors.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
ausmalbar/utils/: mixpanel_tracking.py
coloring_pages/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  sitemaps.py  storage_backends.py  tests.py  urls.py  utils.py  views.py  views_i18n.py  views_legal.py
coloring_pages/middleware/: __init__.py  domain_language_redirect.py
coloring_pages/migrations/: 0001_initial.py  0002_add_i18n_fields.py  0003_add_seo_url_fields.py  0004_add_seo_urls_to_existing_pages.py  0005_searchquery.py  0006_searchquery_referrer_url_searchquery_user_agent.py  0007_systemprompt.py  0008_alter_systemprompt_options_systemprompt_name.py  0009_alter_coloringpage_created_at_and_more.py  0010_add_default_image_prompt.py  0011_coloringpage_metadata.py  0012_systemprompt_quality.py  0013_update_system_prompt_quality.py  0014_alter_systemprompt_quality.py  0015_update_default_prompt_quality.py  (+1 more)
scripts/: create_admin.py
static/: ads.txt  robots.txt
templates/: 404.html  500.html  app.html  base.html  imprint.html
(+53 files in other folders)
